Cleanup for modular version

--- a/extraFiles/configs/coreboot.config
+++ b/extraFiles/configs/coreboot.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # coreboot version: 4.0
-# Mon Apr  8 12:22:54 2013
+# Sun Aug  3 17:08:04 2014
 #
 
 #
@@ -20,6 +20,7 @@ CONFIG_COMPRESS_RAMSTAGE=y
 CONFIG_INCLUDE_CONFIG_FILE=y
 # CONFIG_EARLY_CBMEM_INIT is not set
 # CONFIG_DYNAMIC_CBMEM is not set
+# CONFIG_COLLECT_TIMESTAMPS is not set
 # CONFIG_USE_BLOBS is not set
 # CONFIG_COVERAGE is not set
 
@@ -28,6 +29,7 @@ CONFIG_INCLUDE_CONFIG_FILE=y
 #
 # CONFIG_VENDOR_AAEON is not set
 # CONFIG_VENDOR_ABIT is not set
+# CONFIG_VENDOR_ADLINK is not set
 # CONFIG_VENDOR_ADVANSUS is not set
 # CONFIG_VENDOR_ADVANTECH is not set
 # CONFIG_VENDOR_AMD is not set
@@ -47,12 +49,15 @@ CONFIG_VENDOR_ASROCK=y
 # CONFIG_VENDOR_BIOSTAR is not set
 # CONFIG_VENDOR_BROADCOM is not set
 # CONFIG_VENDOR_COMPAQ is not set
+# CONFIG_VENDOR_CUBIETECH is not set
 # CONFIG_VENDOR_DIGITALLOGIC is not set
+# CONFIG_VENDOR_DMP is not set
 # CONFIG_VENDOR_EAGLELION is not set
 # CONFIG_VENDOR_ECS is not set
 # CONFIG_VENDOR_EMULATION is not set
 # CONFIG_VENDOR_GETAC is not set
 # CONFIG_VENDOR_GIGABYTE is not set
+# CONFIG_VENDOR_GIZMOSPHERE is not set
 # CONFIG_VENDOR_GOOGLE is not set
 # CONFIG_VENDOR_HP is not set
 # CONFIG_VENDOR_IBASE is not set
@@ -65,6 +70,7 @@ CONFIG_VENDOR_ASROCK=y
 # CONFIG_VENDOR_KONTRON is not set
 # CONFIG_VENDOR_LANNER is not set
 # CONFIG_VENDOR_LENOVO is not set
+# CONFIG_VENDOR_LINUTOP is not set
 # CONFIG_VENDOR_LIPPERT is not set
 # CONFIG_VENDOR_MITAC is not set
 # CONFIG_VENDOR_MSI is not set
@@ -83,6 +89,7 @@ CONFIG_VENDOR_ASROCK=y
 # CONFIG_VENDOR_TECHNEXION is not set
 # CONFIG_VENDOR_TECHNOLOGIC is not set
 # CONFIG_VENDOR_TELEVIDEO is not set
+# CONFIG_VENDOR_TI is not set
 # CONFIG_VENDOR_THOMSON is not set
 # CONFIG_VENDOR_TRAVERSE is not set
 # CONFIG_VENDOR_TYAN is not set
@@ -99,43 +106,43 @@ CONFIG_HW_MEM_HOLE_SIZEK=0x200000
 CONFIG_MAX_CPUS=2
 CONFIG_MAX_PHYSICAL_CPUS=1
 # CONFIG_HW_MEM_HOLE_SIZE_AUTO_INC is not set
-CONFIG_MEM_TRAIN_SEQ=2
 CONFIG_RAMTOP=0x1000000
 CONFIG_HEAP_SIZE=0xc0000
 CONFIG_RAMBASE=0x200000
 CONFIG_VGA_BIOS_ID="1002,9802"
-CONFIG_STACK_SIZE=0x10000
 CONFIG_SIO_PORT=0x2e
 # CONFIG_DRIVERS_PS2_KEYBOARD is not set
-# CONFIG_WARNINGS_ARE_ERRORS is not set
 CONFIG_ONBOARD_VGA_IS_PRIMARY=y
 CONFIG_VGA_BIOS=y
 # CONFIG_CONSOLE_POST is not set
-CONFIG_PCI_ROM_RUN=y
 # CONFIG_UDELAY_IO is not set
+CONFIG_DCACHE_RAM_BASE=0x30000
+CONFIG_DCACHE_RAM_SIZE=0x10000
 CONFIG_SERIAL_CPU_INIT=y
 CONFIG_ACPI_SSDTX_NUM=0
 # CONFIG_SB800_AHCI_ROM is not set
 CONFIG_VGA_BIOS_FILE="../extraFiles/vgabios.bin"
 # CONFIG_BOARD_ASROCK_939A785GMH is not set
 CONFIG_BOARD_ASROCK_E350M1=y
+# CONFIG_BOARD_ASROCK_IMB_A180 is not set
 # CONFIG_PCI_64BIT_PREF_MEM is not set
 CONFIG_MMCONF_BASE_ADDRESS=0xf8000000
+CONFIG_ID_SECTION_OFFSET=0x80
+CONFIG_STACK_SIZE=0x1000
 CONFIG_XIP_ROM_SIZE=0x100000
 # CONFIG_MMCONF_SUPPORT_DEFAULT is not set
+CONFIG_UDELAY_LAPIC_FIXED_FSB=200
+# CONFIG_VGA is not set
+CONFIG_MAINBOARD_SMBIOS_MANUFACTURER="DigitalFire"
+CONFIG_MAINBOARD_VERSION="3.1"
+CONFIG_CPU_ADDR_BITS=36
+CONFIG_CACHE_ROM_SIZE_OVERRIDE=0
 # CONFIG_POWER_BUTTON_FORCE_ENABLE is not set
 CONFIG_LOGICAL_CPUS=y
 CONFIG_IOAPIC=y
 CONFIG_SMP=y
-CONFIG_TTYS0_BAUD=115200
-CONFIG_TTYS0_BASE=0x3f8
-CONFIG_TTYS0_LCS=3
 CONFIG_DEFAULT_CONSOLE_LOGLEVEL=0
-CONFIG_MAXIMUM_CONSOLE_LOGLEVEL=0
-CONFIG_CONSOLE_SERIAL8250=y
 # CONFIG_USBDEBUG is not set
-# CONFIG_K8_REV_F_SUPPORT is not set
-CONFIG_CPU_ADDR_BITS=36
 CONFIG_BOARD_ROMSIZE_KB_4096=y
 # CONFIG_COREBOOT_ROMSIZE_KB_64 is not set
 # CONFIG_COREBOOT_ROMSIZE_KB_128 is not set
@@ -145,20 +152,23 @@ CONFIG_BOARD_ROMSIZE_KB_4096=y
 # CONFIG_COREBOOT_ROMSIZE_KB_2048 is not set
 CONFIG_COREBOOT_ROMSIZE_KB_4096=y
 # CONFIG_COREBOOT_ROMSIZE_KB_8192 is not set
+# CONFIG_COREBOOT_ROMSIZE_KB_12288 is not set
 # CONFIG_COREBOOT_ROMSIZE_KB_16384 is not set
 CONFIG_COREBOOT_ROMSIZE_KB=4096
 CONFIG_ROM_SIZE=0x400000
-CONFIG_MAINBOARD_SERIAL_NUMBER="123456789"
-CONFIG_MAINBOARD_VERSION="1.0"
+CONFIG_MAINBOARD_SERIAL_NUMBER="FIREBrick"
+CONFIG_MAINBOARD_SMBIOS_PRODUCT_NAME="Firebrick 3.1 /w Module Support"
 CONFIG_ARCH_X86=y
 # CONFIG_ARCH_ARMV7 is not set
 
 #
 # Architecture (x86)
 #
+CONFIG_X86_ARCH_OPTIONS=y
 # CONFIG_AP_IN_SIPI_WAIT is not set
 # CONFIG_SIPI_VECTOR_IN_ROM is not set
 CONFIG_MAX_REBOOT_CNT=3
+CONFIG_NUM_IPI_STARTS=2
 CONFIG_X86_BOOTBLOCK_SIMPLE=y
 # CONFIG_X86_BOOTBLOCK_NORMAL is not set
 CONFIG_BOOTBLOCK_SOURCE="bootblock_simple.c"
@@ -167,15 +177,12 @@ CONFIG_BOOTBLOCK_SOURCE="bootblock_simple.c"
 CONFIG_PC80_SYSTEM=y
 # CONFIG_HAVE_CMOS_DEFAULT is not set
 CONFIG_BOOTBLOCK_SOUTHBRIDGE_INIT="southbridge/amd/cimx/sb800/bootblock.c"
-CONFIG_HAVE_ARCH_MEMSET=y
-CONFIG_HAVE_ARCH_MEMCPY=y
-# CONFIG_BIG_ENDIAN is not set
-CONFIG_LITTLE_ENDIAN=y
 CONFIG_IOAPIC_INTERRUPTS_ON_FSB=y
 # CONFIG_IOAPIC_INTERRUPTS_ON_APIC_SERIAL_BUS is not set
-# CONFIG_PCI_CONF2 is not set
 CONFIG_HPET_ADDRESS=0xfed00000
-CONFIG_ID_SECTION_OFFSET=0x80
+CONFIG_HAVE_ARCH_MEMSET=y
+CONFIG_HAVE_ARCH_MEMCPY=y
+CONFIG_HAVE_ARCH_MEMMOVE=y
 
 #
 # Chipset
@@ -191,7 +198,6 @@ CONFIG_CBB=0x0
 CONFIG_CDB=0x18
 CONFIG_DIMM_SUPPORT=0x0104
 CONFIG_LIFT_BSP_APIC_ID=y
-CONFIG_UDELAY_LAPIC_FIXED_FSB=200
 CONFIG_CPU_AMD_AGESA=y
 CONFIG_HAVE_INIT_TIMER=y
 CONFIG_CPU_AMD_AGESA_FAMILY14=y
@@ -199,7 +205,9 @@ CONFIG_HIGH_SCRATCH_MEMORY_SIZE=0x71000
 CONFIG_SMM_TSEG_SIZE=0
 # CONFIG_SSE2 is not set
 # CONFIG_CPU_INTEL_FIRMWARE_INTERFACE_TABLE is not set
+# CONFIG_CPU_INTEL_TURBO_NOT_PACKAGE_SCOPED is not set
 CONFIG_UDELAY_LAPIC=y
+CONFIG_LAPIC_MONOTONIC_TIMER=y
 # CONFIG_UDELAY_TSC is not set
 # CONFIG_UDELAY_TIMER2 is not set
 # CONFIG_TSC_CALIBRATE_WITH_IO is not set
@@ -208,9 +216,10 @@ CONFIG_TSC_SYNC_LFENCE=y
 # CONFIG_CACHE_ROM is not set
 # CONFIG_SMM_TSEG is not set
 CONFIG_X86_AMD_FIXED_MTRRS=y
+# CONFIG_PARALLEL_MP is not set
 CONFIG_CACHE_AS_RAM=y
 CONFIG_AP_SIPI_VECTOR=0xfffff000
-# CONFIG_CPU_MICROCODE_IN_CBFS is not set
+# CONFIG_SUPPORT_CPU_UCODE_IN_CBFS is not set
 # CONFIG_CPU_MICROCODE_CBFS_GENERATE is not set
 # CONFIG_CPU_MICROCODE_CBFS_EXTERNAL is not set
 CONFIG_CPU_MICROCODE_CBFS_NONE=y
@@ -229,10 +238,13 @@ CONFIG_NORTHBRIDGE_AMD_AGESA_FAMILY14=y
 # CONFIG_AMD_NB_CIMX is not set
 # CONFIG_NORTHBRIDGE_AMD_CIMX_RD890 is not set
 CONFIG_CBFS_SIZE=0x400000
+CONFIG_MAX_PIRQ_LINKS=4
 
 #
 # Southbridge
 #
+CONFIG_EHCI_BAR=0xfef00000
+CONFIG_EHCI_DEBUG_OFFSET=0xe0
 CONFIG_AMD_SB_CIMX=y
 CONFIG_SOUTHBRIDGE_AMD_CIMX_SB800=y
 # CONFIG_ENABLE_IDE_COMBINED_MODE is not set
@@ -248,7 +260,9 @@ CONFIG_SB800_NO_FAN_CONTROL=y
 # CONFIG_SB800_MANUAL_FAN_CONTROL is not set
 # CONFIG_SB800_IMC_FAN_CONTROL is not set
 # CONFIG_SOUTHBRIDGE_AMD_CIMX_SB900 is not set
+CONFIG_AMD_SB_SPI_TX_LEN=4
 # CONFIG_SPI_FLASH is not set
+# CONFIG_SOUTHBRIDGE_INTEL_COMMON is not set
 
 #
 # Super I/O
@@ -257,6 +271,10 @@ CONFIG_SUPERIO_WINBOND_W83627HF=y
 
 #
 # Embedded Controllers
+#
+
+#
+# SoC
 #
 
 #
@@ -274,6 +292,7 @@ CONFIG_PCIX_PLUGIN_SUPPORT=y
 CONFIG_PCIEXP_PLUGIN_SUPPORT=y
 CONFIG_AGP_PLUGIN_SUPPORT=y
 CONFIG_CARDBUS_PLUGIN_SUPPORT=y
+# CONFIG_AZALIA_PLUGIN_SUPPORT is not set
 # CONFIG_PCIEXP_COMMON_CLOCK is not set
 # CONFIG_PCIEXP_ASPM is not set
 CONFIG_PCI_BUS_SEGN_BITS=0
@@ -289,42 +308,53 @@ CONFIG_PCI_BUS_SEGN_BITS=0
 # CONFIG_FRAMEBUFFER_KEEP_VESA_MODE is not set
 
 #
+# PXE ROM
+#
+# CONFIG_PXE_ROM is not set
+CONFIG_SUBSYSTEM_VENDOR_ID=0x0000
+CONFIG_SUBSYSTEM_DEVICE_ID=0x0000
+
+#
 # Generic Drivers
 #
+# CONFIG_DRIVERS_I2C_RTD2132 is not set
+# CONFIG_INTEL_DP is not set
+# CONFIG_INTEL_DDI is not set
 # CONFIG_IPMI_KCS is not set
 # CONFIG_DRIVER_MAXIM_MAX77686 is not set
 # CONFIG_DRIVERS_OXFORD_OXPCIE is not set
+# CONFIG_DRIVER_PARADE_PS8625 is not set
 # CONFIG_TPM is not set
 # CONFIG_RTL8168_ROM_DISABLE is not set
 # CONFIG_DRIVERS_SIL_3114 is not set
+# CONFIG_DRIVER_TI_TPS65090 is not set
+# CONFIG_DRIVER_XPOWERS_AXP209 is not set
 CONFIG_MMCONF_SUPPORT=y
 
 #
 # Console
 #
-CONFIG_DEFAULT_EARLY_CONSOLE=y
 CONFIG_EARLY_CONSOLE=y
+CONFIG_SQUELCH_EARLY_SMP=y
 CONFIG_CONSOLE_SERIAL=y
+CONFIG_CONSOLE_SERIAL8250=y
 CONFIG_CONSOLE_SERIAL_COM1=y
 # CONFIG_CONSOLE_SERIAL_COM2 is not set
 # CONFIG_CONSOLE_SERIAL_COM3 is not set
 # CONFIG_CONSOLE_SERIAL_COM4 is not set
+CONFIG_TTYS0_BASE=0x3f8
 CONFIG_CONSOLE_SERIAL_115200=y
 # CONFIG_CONSOLE_SERIAL_57600 is not set
 # CONFIG_CONSOLE_SERIAL_38400 is not set
 # CONFIG_CONSOLE_SERIAL_19200 is not set
 # CONFIG_CONSOLE_SERIAL_9600 is not set
-# CONFIG_HAVE_USBDEBUG is not set
+CONFIG_TTYS0_BAUD=115200
+CONFIG_TTYS0_LCS=3
+# CONFIG_SPKMODEM is not set
+CONFIG_HAVE_USBDEBUG=y
+CONFIG_HAVE_USBDEBUG_OPTIONS=y
 # CONFIG_CONSOLE_NE2K is not set
-# CONFIG_MAXIMUM_CONSOLE_LOGLEVEL_8 is not set
-# CONFIG_MAXIMUM_CONSOLE_LOGLEVEL_7 is not set
-# CONFIG_MAXIMUM_CONSOLE_LOGLEVEL_6 is not set
-# CONFIG_MAXIMUM_CONSOLE_LOGLEVEL_5 is not set
-# CONFIG_MAXIMUM_CONSOLE_LOGLEVEL_4 is not set
-# CONFIG_MAXIMUM_CONSOLE_LOGLEVEL_3 is not set
-# CONFIG_MAXIMUM_CONSOLE_LOGLEVEL_2 is not set
-# CONFIG_MAXIMUM_CONSOLE_LOGLEVEL_1 is not set
-CONFIG_MAXIMUM_CONSOLE_LOGLEVEL_0=y
+# CONFIG_CONSOLE_CBMEM is not set
 # CONFIG_DEFAULT_CONSOLE_LOGLEVEL_8 is not set
 # CONFIG_DEFAULT_CONSOLE_LOGLEVEL_7 is not set
 # CONFIG_DEFAULT_CONSOLE_LOGLEVEL_6 is not set
@@ -334,7 +364,6 @@ CONFIG_MAXIMUM_CONSOLE_LOGLEVEL_0=y
 # CONFIG_DEFAULT_CONSOLE_LOGLEVEL_2 is not set
 # CONFIG_DEFAULT_CONSOLE_LOGLEVEL_1 is not set
 CONFIG_DEFAULT_CONSOLE_LOGLEVEL_0=y
-# CONFIG_CONSOLE_LOGBUF is not set
 # CONFIG_NO_POST is not set
 # CONFIG_CMOS_POST is not set
 CONFIG_IO_POST=y
@@ -345,24 +374,23 @@ CONFIG_HAVE_UART_IO_MAPPED=y
 # CONFIG_HAVE_ACPI_RESUME is not set
 # CONFIG_HAVE_ACPI_SLIC is not set
 CONFIG_HAVE_HARD_RESET=y
+CONFIG_HAVE_MONOTONIC_TIMER=y
+# CONFIG_TIMER_QUEUE is not set
 CONFIG_HAVE_OPTION_TABLE=y
 # CONFIG_PIRQ_ROUTE is not set
 # CONFIG_HAVE_SMI_HANDLER is not set
 CONFIG_PCI_IO_CFG_EXT=y
-CONFIG_CACHE_ROM_SIZE=0x400000
 # CONFIG_USE_WATCHDOG_ON_BOOT is not set
-# CONFIG_VGA is not set
 CONFIG_GFXUMA=y
 # CONFIG_RELOCATABLE_MODULES is not set
+# CONFIG_HAVE_REFCODE_BLOB is not set
 CONFIG_HAVE_ACPI_TABLES=y
 CONFIG_HAVE_MP_TABLE=y
 CONFIG_HAVE_PIRQ_TABLE=y
-CONFIG_MAX_PIRQ_LINKS=4
 
 #
 # System tables
 #
-CONFIG_MULTIBOOT=y
 CONFIG_GENERATE_ACPI_TABLES=y
 CONFIG_GENERATE_MP_TABLE=y
 CONFIG_GENERATE_PIRQ_TABLE=y
@@ -373,12 +401,13 @@ CONFIG_GENERATE_SMBIOS_TABLES=y
 #
 # CONFIG_PAYLOAD_NONE is not set
 CONFIG_PAYLOAD_ELF=y
+# CONFIG_PAYLOAD_LINUX is not set
 # CONFIG_PAYLOAD_SEABIOS is not set
 # CONFIG_PAYLOAD_FILO is not set
+# CONFIG_PAYLOAD_GRUB2 is not set
 # CONFIG_PAYLOAD_TIANOCORE is not set
 CONFIG_PAYLOAD_FILE="../linux.elf"
 CONFIG_COMPRESSED_PAYLOAD_LZMA=y
-# CONFIG_COMPRESSED_PAYLOAD_NRV2B is not set
 
 #
 # Debugging
@@ -392,13 +421,11 @@ CONFIG_COMPRESSED_PAYLOAD_LZMA=y
 # CONFIG_DEBUG_MALLOC is not set
 # CONFIG_DEBUG_ACPI is not set
 # CONFIG_REALMODE_DEBUG is not set
-# CONFIG_LLSHELL is not set
 # CONFIG_TRACE is not set
-# CONFIG_AP_CODE_IN_CAR is not set
-# CONFIG_RAMINIT_SYSINFO is not set
 # CONFIG_ENABLE_APIC_EXT_ID is not set
+CONFIG_WARNINGS_ARE_ERRORS=y
 # CONFIG_POWER_BUTTON_DEFAULT_ENABLE is not set
 # CONFIG_POWER_BUTTON_DEFAULT_DISABLE is not set
 # CONFIG_POWER_BUTTON_FORCE_DISABLE is not set
 # CONFIG_POWER_BUTTON_IS_OPTIONAL is not set
-# CONFIG_CHROMEOS is not set
+# CONFIG_MAINBOARD_HAS_CHROMEOS is not set
