--- a/extraFiles/configs/buildroot.config
+++ b/extraFiles/configs/buildroot.config
@@ -132,7 +132,7 @@ BR2_UCLIBC_CONFIG="package/uclibc/uClibc-0.9.33.config"
 BR2_TOOLCHAIN_BUILDROOT_LARGEFILE=y
 # BR2_TOOLCHAIN_BUILDROOT_INET_IPV6 is not set
 # BR2_TOOLCHAIN_BUILDROOT_INET_RPC is not set
-# BR2_TOOLCHAIN_BUILDROOT_WCHAR is not set
+BR2_TOOLCHAIN_BUILDROOT_WCHAR=y
 # BR2_TOOLCHAIN_BUILDROOT_LOCALE is not set
 # BR2_PTHREADS_NONE is not set
 # BR2_PTHREADS is not set
@@ -177,6 +177,7 @@ BR2_GCC_ENABLE_TLS=y
 # BR2_GCC_ENABLE_LIBMUDFLAP is not set
 # BR2_PACKAGE_HOST_GDB is not set
 BR2_LARGEFILE=y
+BR2_USE_WCHAR=y
 BR2_TOOLCHAIN_HAS_THREADS=y
 BR2_TOOLCHAIN_HAS_SHADOW_PASSWORDS=y
 BR2_ENABLE_LOCALE_PURGE=y
@@ -208,10 +209,7 @@ BR2_INIT_BUSYBOX=y
 # BR2_ROOTFS_DEVICE_CREATION_STATIC is not set
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_DEVTMPFS=y
 # BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_MDEV is not set
-
-#
-# udev needs a toolchain w/ largefile, wchar
-#
+# BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_UDEV is not set
 BR2_ROOTFS_DEVICE_TABLE="system/device_table.txt"
 BR2_ROOTFS_SKELETON_DEFAULT=y
 # BR2_ROOTFS_SKELETON_CUSTOM is not set
@@ -293,14 +291,8 @@ BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 # ffmpeg needs a toolchain w/ largefile, IPv6
 #
 # BR2_PACKAGE_FLAC is not set
-
-#
-# gstreamer 0.10 needs a toolchain w/ wchar, threads
-#
-
-#
-# gstreamer 1.x needs a toolchain w/ wchar, threads
-#
+# BR2_PACKAGE_GSTREAMER is not set
+# BR2_PACKAGE_GSTREAMER1 is not set
 # BR2_PACKAGE_LAME is not set
 # BR2_PACKAGE_LIBVPX is not set
 # BR2_PACKAGE_MADPLAY is not set
@@ -312,10 +304,7 @@ BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 # BR2_PACKAGE_MPLAYER is not set
 # BR2_PACKAGE_MUSEPACK is not set
 # BR2_PACKAGE_OPUS_TOOLS is not set
-
-#
-# pulseaudio needs a toolchain w/ wchar, largefile, threads
-#
+# BR2_PACKAGE_PULSEAUDIO is not set
 # BR2_PACKAGE_TSTOOLS is not set
 
 #
@@ -329,10 +318,7 @@ BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 # Compressors and decompressors
 #
 # BR2_PACKAGE_BZIP2 is not set
-
-#
-# gzip needs a toolchain w/ wchar
-#
+# BR2_PACKAGE_GZIP is not set
 # BR2_PACKAGE_INFOZIP is not set
 # BR2_PACKAGE_LZOP is not set
 # BR2_PACKAGE_XZ is not set
@@ -348,10 +334,7 @@ BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 # BR2_PACKAGE_DHRYSTONE is not set
 # BR2_PACKAGE_DMALLOC is not set
 # BR2_PACKAGE_DROPWATCH is not set
-
-#
-# dstat needs a toolchain w/ wchar
-#
+# BR2_PACKAGE_DSTAT is not set
 
 #
 # duma needs a toolchain w/ C++, threads
@@ -364,10 +347,7 @@ BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 # BR2_PACKAGE_IOZONE is not set
 # BR2_PACKAGE_KEXEC is not set
 # BR2_PACKAGE_KTAP is not set
-
-#
-# latencytop needs a toolchain w/ wchar, threads
-#
+# BR2_PACKAGE_LATENCYTOP is not set
 # BR2_PACKAGE_LMBENCH is not set
 # BR2_PACKAGE_LSOF is not set
 
@@ -376,10 +356,7 @@ BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 #
 # BR2_PACKAGE_LTRACE is not set
 # BR2_PACKAGE_LTTNG_MODULES is not set
-
-#
-# lttng-tools needs a toolchain w/ largefile, threads, wchar
-#
+# BR2_PACKAGE_LTTNG_TOOLS is not set
 # BR2_PACKAGE_MEMSTAT is not set
 # BR2_PACKAGE_NETPERF is not set
 
@@ -394,10 +371,7 @@ BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 # BR2_PACKAGE_RT_TESTS is not set
 # BR2_PACKAGE_STRACE is not set
 # BR2_PACKAGE_STRESS is not set
-
-#
-# sysprof needs a toolchain w/ wchar, threads
-#
+# BR2_PACKAGE_SYSPROF is not set
 # BR2_PACKAGE_TINYMEMBENCH is not set
 # BR2_PACKAGE_TRACE_CMD is not set
 # BR2_PACKAGE_VALGRIND is not set
@@ -408,59 +382,29 @@ BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 #
 # BR2_PACKAGE_BINUTILS is not set
 # BR2_PACKAGE_BSDIFF is not set
-
-#
-# cvs needs a toolchain w/ wchar
-#
-
-#
-# diffutils needs a toolchain w/ wchar
-#
+# BR2_PACKAGE_CVS is not set
+# BR2_PACKAGE_DIFFUTILS is not set
 # BR2_PACKAGE_DISTCC is not set
-
-#
-# findutils needs a toolchain w/ wchar
-#
+# BR2_PACKAGE_FINDUTILS is not set
 # BR2_PACKAGE_FLEX is not set
-
-#
-# gawk needs a toolchain w/ wchar, dynamic library
-#
-
-#
-# gettext needs a toolchain w/ wchar
-#
+# BR2_PACKAGE_GAWK is not set
+# BR2_PACKAGE_GETTEXT is not set
 # BR2_PACKAGE_GIT is not set
 
 #
 # gperf needs a toolchain w/ C++
 #
-
-#
-# grep needs a toolchain w/ wchar
-#
+# BR2_PACKAGE_GREP is not set
 # BR2_PACKAGE_JQ is not set
 # BR2_PACKAGE_LIBTOOL is not set
 # BR2_PACKAGE_MAKE is not set
-
-#
-# patch needs a toolchain w/ wchar
-#
+# BR2_PACKAGE_PATCH is not set
 # BR2_PACKAGE_PKGCONF is not set
-
-#
-# sed needs a toolchain w/ wchar
-#
+# BR2_PACKAGE_SED is not set
 # BR2_PACKAGE_SSTRIP is not set
 # BR2_PACKAGE_SUBVERSION is not set
-
-#
-# tar needs a toolchain w/ wchar
-#
-
-#
-# tree needs a toolchain w/ wchar
-#
+# BR2_PACKAGE_TAR is not set
+# BR2_PACKAGE_TREE is not set
 # BR2_PACKAGE_YASM is not set
 
 #
@@ -468,31 +412,13 @@ BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 #
 # BR2_PACKAGE_CIFS_UTILS is not set
 # BR2_PACKAGE_CRAMFS is not set
-
-#
-# curlftpfs needs a toolchain w/ largefile, wchar, threads, dynamic library
-#
-
-#
-# dosfstools needs a toolchain w/ largefile, wchar
-#
-
-#
-# e2fsprogs needs a toolchain w/ largefile, wchar
-#
+# BR2_PACKAGE_CURLFTPFS is not set
+# BR2_PACKAGE_DOSFSTOOLS is not set
+# BR2_PACKAGE_E2FSPROGS is not set
 # BR2_PACKAGE_ECRYPTFS_UTILS is not set
-
-#
-# exfat needs a toolchain w/ largefile, wchar, threads, dynamic library
-#
-
-#
-# exfat-utils needs a toolchain w/ largefile, wchar
-#
-
-#
-# f2fs-tools needs a toolchain w/ largefile, wchar
-#
+# BR2_PACKAGE_EXFAT is not set
+# BR2_PACKAGE_EXFAT_UTILS is not set
+# BR2_PACKAGE_F2FS_TOOLS is not set
 # BR2_PACKAGE_FLASHBENCH is not set
 # BR2_PACKAGE_GENEXT2FS is not set
 # BR2_PACKAGE_GENROMFS is not set
@@ -500,20 +426,11 @@ BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 # BR2_PACKAGE_MMC_UTILS is not set
 # BR2_PACKAGE_MTD is not set
 # BR2_PACKAGE_NFS_UTILS is not set
-
-#
-# ntfs-3g needs a toolchain w/ largefile, wchar, threads
-#
+# BR2_PACKAGE_NTFS_3G is not set
 # BR2_PACKAGE_SQUASHFS is not set
-
-#
-# sshfs needs a toolchain w/ largefile, wchar, threads, dynamic library
-#
-# BR2_PACKAGE_UNIONFS is not set
-
-#
-# xfsprogs needs a toolchain w/ largefile, wchar
-#
+# BR2_PACKAGE_SSHFS is not set
+BR2_PACKAGE_UNIONFS=y
+# BR2_PACKAGE_XFSPROGS is not set
 
 #
 # Games
@@ -532,14 +449,8 @@ BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 #
 # BR2_PACKAGE_FSWEBCAM is not set
 # BR2_PACKAGE_GNUPLOT is not set
-
-#
-# jhead needs a toolchain w/ wchar
-#
-
-#
-# rrdtool needs a toolchain w/ wchar
-#
+# BR2_PACKAGE_JHEAD is not set
+# BR2_PACKAGE_RRDTOOL is not set
 
 #
 # Graphic libraries
@@ -567,19 +478,13 @@ BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 #
 # ocrad needs a toolchain w/ C++
 #
-
-#
-# psplash needs a toolchain w/ wchar
-#
+# BR2_PACKAGE_PSPLASH is not set
 # BR2_PACKAGE_SDL is not set
 
 #
 # Other GUIs
 #
-
-#
-# EFL needs a toolchain w/ wchar
-#
+# BR2_PACKAGE_EFL is not set
 
 #
 # qt needs a toolchain w/ C++, threads
@@ -593,10 +498,7 @@ BR2_PACKAGE_QT5_JSCORE_AVAILABLE=y
 #
 # weston needs udev and a toolchain w/ threads
 #
-
-#
-# X.org needs a toolchain w/ wchar, threads, dynamic library
-#
+# BR2_PACKAGE_XORG7 is not set
 
 #
 # X applications
@@ -630,10 +532,8 @@ BR2_PACKAGE_QT5_JSCORE_AVAILABLE=y
 # BR2_PACKAGE_ACPID is not set
 # BR2_PACKAGE_AVRDUDE is not set
 # BR2_PACKAGE_CDRKIT is not set
-
-#
-# cryptsetup needs a toolchain w/ largefile, wchar
-#
+# BR2_PACKAGE_CRYPTSETUP is not set
+# BR2_PACKAGE_CWIID is not set
 # BR2_PACKAGE_DBUS is not set
 # BR2_PACKAGE_DEVMEM2 is not set
 # BR2_PACKAGE_DMIDECODE is not set
@@ -656,10 +556,7 @@ BR2_PACKAGE_QT5_JSCORE_AVAILABLE=y
 #
 # gptfdisk needs a toolchain w/ largefile, wchar, C++
 #
-
-#
-# gvfs needs a toolchain w/ largefile, wchar, threads
-#
+# BR2_PACKAGE_GVFS is not set
 # BR2_PACKAGE_HDPARM is not set
 # BR2_PACKAGE_HWDATA is not set
 # BR2_PACKAGE_I2C_TOOLS is not set
@@ -678,22 +575,13 @@ BR2_PACKAGE_QT5_JSCORE_AVAILABLE=y
 #
 # BR2_PACKAGE_LSUIO is not set
 # BR2_PACKAGE_LVM2 is not set
-# BR2_PACKAGE_MDADM is not set
+BR2_PACKAGE_MDADM=y
 # BR2_PACKAGE_MEDIA_CTL is not set
 # BR2_PACKAGE_MEMTESTER is not set
-
-#
-# minicom needs a toolchain w/ wchar
-#
+# BR2_PACKAGE_MINICOM is not set
 # BR2_PACKAGE_NANOCOM is not set
-
-#
-# neard needs a toolchain w/ wchar, threads
-#
-
-#
-# ofono needs a toolchain w/ wchar, threads
-#
+# BR2_PACKAGE_NEARD is not set
+# BR2_PACKAGE_OFONO is not set
 
 #
 # ola needs a toolchain w/ C++, threads, largefile, wchar
@@ -704,10 +592,7 @@ BR2_PACKAGE_QT5_JSCORE_AVAILABLE=y
 #
 # openpowerlink needs a toolchain w/ C++, threads
 #
-
-#
-# parted needs a toolchain w/ largefile, wchar
-#
+# BR2_PACKAGE_PARTED is not set
 # BR2_PACKAGE_PCIUTILS is not set
 # BR2_PACKAGE_PICOCOM is not set
 # BR2_PACKAGE_RNG_TOOLS is not set
@@ -719,10 +604,7 @@ BR2_PACKAGE_QT5_JSCORE_AVAILABLE=y
 #
 # smartmontools needs a toolchain w/ C++
 #
-
-#
-# smstools3 needs a toolchain w/ wchar, threads
-#
+# BR2_PACKAGE_SMSTOOLS3 is not set
 # BR2_PACKAGE_SNOWBALL_HDMISERVICE is not set
 # BR2_PACKAGE_SREDIRD is not set
 # BR2_PACKAGE_STATSERIAL is not set
@@ -767,18 +649,9 @@ BR2_PACKAGE_QT5_JSCORE_AVAILABLE=y
 #
 # BR2_PACKAGE_PERL is not set
 # BR2_PACKAGE_PHP is not set
-
-#
-# python needs a toolchain w/ wchar
-#
-
-#
-# python3 needs a toolchain w/ wchar
-#
-
-#
-# ruby needs a toolchain w/ wchar, threads
-#
+# BR2_PACKAGE_PYTHON is not set
+# BR2_PACKAGE_PYTHON3 is not set
+# BR2_PACKAGE_RUBY is not set
 # BR2_PACKAGE_TCL is not set
 
 #
@@ -810,10 +683,7 @@ BR2_PACKAGE_QT5_JSCORE_AVAILABLE=y
 #
 # libmodplug needs a toolchain w/ C++
 #
-
-#
-# libmpd needs a toolchain w/ wchar, threads
-#
+# BR2_PACKAGE_LIBMPD is not set
 # BR2_PACKAGE_LIBREPLAYGAIN is not set
 # BR2_PACKAGE_LIBSAMPLERATE is not set
 # BR2_PACKAGE_LIBSNDFILE is not set
@@ -834,16 +704,13 @@ BR2_PACKAGE_QT5_JSCORE_AVAILABLE=y
 #
 # Compression and decompression
 #
-
-#
-# libarchive needs a toolchain w/ wchar
-#
+# BR2_PACKAGE_LIBARCHIVE is not set
 # BR2_PACKAGE_LZO is not set
 
 #
 # snappy needs a toolchain w/ C++
 #
-# BR2_PACKAGE_ZLIB is not set
+BR2_PACKAGE_ZLIB=y
 
 #
 # Crypto
@@ -851,10 +718,7 @@ BR2_PACKAGE_QT5_JSCORE_AVAILABLE=y
 # BR2_PACKAGE_BEECRYPT is not set
 # BR2_PACKAGE_CA_CERTIFICATES is not set
 # BR2_PACKAGE_CRYPTODEV is not set
-
-#
-# gnutls needs a toolchain w/ wchar
-#
+# BR2_PACKAGE_GNUTLS is not set
 # BR2_PACKAGE_LIBASSUAN is not set
 # BR2_PACKAGE_LIBGCRYPT is not set
 # BR2_PACKAGE_LIBGPG_ERROR is not set
@@ -862,10 +726,7 @@ BR2_PACKAGE_QT5_JSCORE_AVAILABLE=y
 # BR2_PACKAGE_LIBMCRYPT is not set
 # BR2_PACKAGE_LIBMHASH is not set
 # BR2_PACKAGE_LIBNSS is not set
-
-#
-# libsecret needs a toolchain w/ wchar, threads
-#
+# BR2_PACKAGE_LIBSECRET is not set
 # BR2_PACKAGE_LIBSHA1 is not set
 # BR2_PACKAGE_LIBSSH2 is not set
 # BR2_PACKAGE_NETTLE is not set
@@ -888,13 +749,10 @@ BR2_PACKAGE_QT5_JSCORE_AVAILABLE=y
 #
 # Filesystem
 #
-
-#
-# gamin needs a toolchain w/ wchar, threads
-#
+# BR2_PACKAGE_GAMIN is not set
 # BR2_PACKAGE_LIBCONFIG is not set
 # BR2_PACKAGE_LIBCONFUSE is not set
-# BR2_PACKAGE_LIBFUSE is not set
+BR2_PACKAGE_LIBFUSE=y
 # BR2_PACKAGE_LIBLOCKFILE is not set
 
 #
@@ -906,18 +764,12 @@ BR2_PACKAGE_QT5_JSCORE_AVAILABLE=y
 #
 # Graphics
 #
-
-#
-# atk needs a toolchain w/ wchar, threads
-#
+# BR2_PACKAGE_ATK is not set
 # BR2_PACKAGE_CAIRO is not set
 # BR2_PACKAGE_FONTCONFIG is not set
 # BR2_PACKAGE_FREETYPE is not set
 # BR2_PACKAGE_GD is not set
-
-#
-# gdk-pixbuf needs a toolchain w/ wchar, threads
-#
+# BR2_PACKAGE_GDK_PIXBUF is not set
 
 #
 # harfbuzz needs a toolchain w/ C++
@@ -997,24 +849,19 @@ BR2_PACKAGE_QT5_JSCORE_AVAILABLE=y
 # libmbim needs udev /dev management and a toolchain w/ wchar, threads
 #
 # BR2_PACKAGE_LIBNFC is not set
-
-#
-# libqmi needs a toolchain w/ wchar, threads
-#
+# BR2_PACKAGE_LIBQMI is not set
 # BR2_PACKAGE_LIBRAW1394 is not set
 
 #
 # libserial needs a toolchain w/ C++
 #
 # BR2_PACKAGE_LIBSOC is not set
-# BR2_PACKAGE_LIBUSB is not set
+BR2_PACKAGE_LIBUSB=y
+BR2_PACKAGE_LIBUSB_COMPAT=y
 # BR2_PACKAGE_LIBV4L is not set
 # BR2_PACKAGE_LIBXKBCOMMON is not set
 # BR2_PACKAGE_MTDEV is not set
-
-#
-# neardal needs a toolchain w/ wchar, threads
-#
+# BR2_PACKAGE_NEARDAL is not set
 # BR2_PACKAGE_PCSC_LITE is not set
 # BR2_PACKAGE_TSLIB is not set
 
@@ -1043,10 +890,7 @@ BR2_PACKAGE_QT5_JSCORE_AVAILABLE=y
 # BR2_PACKAGE_EZXML is not set
 # BR2_PACKAGE_JANSSON is not set
 # BR2_PACKAGE_JSON_C is not set
-
-#
-# json-glib needs a toolchain w/ wchar, threads
-#
+# BR2_PACKAGE_JSON_GLIB is not set
 
 #
 # libjson needs a toolchain w/ C++
@@ -1090,10 +934,7 @@ BR2_PACKAGE_QT5_JSCORE_AVAILABLE=y
 #
 # libmatroska needs a toolchain w/ C++
 #
-
-#
-# libmms needs a toolchain w/ wchar, threads
-#
+# BR2_PACKAGE_LIBMMS is not set
 # BR2_PACKAGE_LIBMPEG2 is not set
 # BR2_PACKAGE_LIBOGG is not set
 # BR2_PACKAGE_LIBPLAYER is not set
@@ -1123,10 +964,7 @@ BR2_PACKAGE_QT5_JSCORE_AVAILABLE=y
 #
 # filemq needs a toolchain w/ C++, IPv6, largefile, wchar, threads
 #
-
-#
-# glib-networking needs a toolchain w/ wchar, threads
-#
+# BR2_PACKAGE_GLIB_NETWORKING is not set
 # BR2_PACKAGE_LIBCGI is not set
 
 #
@@ -1168,10 +1006,7 @@ BR2_PACKAGE_QT5_JSCORE_AVAILABLE=y
 #
 # libshairplay needs a toolchain w/ IPv6, threads
 #
-
-#
-# libsoup needs a toolchain w/ wchar, threads
-#
+# BR2_PACKAGE_LIBSOUP is not set
 # BR2_PACKAGE_LIBTIRPC is not set
 
 #
@@ -1236,10 +1071,7 @@ BR2_PACKAGE_QT5_JSCORE_AVAILABLE=y
 #
 # eigen needs a toolchain w/ C++
 #
-
-#
-# elfutils needs a toolchain w/ largefile, wchar
-#
+# BR2_PACKAGE_ELFUTILS is not set
 # BR2_PACKAGE_FFTW is not set
 
 #
@@ -1266,14 +1098,8 @@ BR2_PACKAGE_QT5_JSCORE_AVAILABLE=y
 # BR2_PACKAGE_LIBEVDEV is not set
 # BR2_PACKAGE_LIBEVENT is not set
 # BR2_PACKAGE_LIBFFI is not set
-
-#
-# libglib2 needs a toolchain w/ wchar, threads
-#
-
-#
-# libical needs a toolchain w/ wchar
-#
+# BR2_PACKAGE_LIBGLIB2 is not set
+# BR2_PACKAGE_LIBICAL is not set
 # BR2_PACKAGE_LIBLOG4C_LOCALTIME is not set
 BR2_PACKAGE_LIBNSPR_ARCH_SUPPORT=y
 # BR2_PACKAGE_LIBNSPR is not set
@@ -1305,10 +1131,7 @@ BR2_PACKAGE_LIBNSPR_ARCH_SUPPORT=y
 #
 # log4cxx needs a toolchain w/ C++, threads, dynamic library
 #
-
-#
-# lttng-libust needs a toolchain w/ wchar, largefile, threads
-#
+# BR2_PACKAGE_LTTNG_LIBUST is not set
 # BR2_PACKAGE_MPC is not set
 # BR2_PACKAGE_MPFR is not set
 
@@ -1355,15 +1178,16 @@ BR2_PACKAGE_LIBNSPR_ARCH_SUPPORT=y
 #
 # icu needs a toolchain w/ C++, wchar, threads
 #
-
-#
-# libedit needs a toolchain w/ wchar
-#
+# BR2_PACKAGE_LIBEDIT is not set
 # BR2_PACKAGE_LIBENCA is not set
 # BR2_PACKAGE_LIBFRIBIDI is not set
 # BR2_PACKAGE_LIBICONV is not set
 # BR2_PACKAGE_LINENOISE is not set
-# BR2_PACKAGE_NCURSES is not set
+BR2_PACKAGE_NCURSES=y
+# BR2_PACKAGE_NCURSES_TARGET_PANEL is not set
+# BR2_PACKAGE_NCURSES_TARGET_FORM is not set
+# BR2_PACKAGE_NCURSES_TARGET_MENU is not set
+# BR2_PACKAGE_NCURSES_TARGET_PROGS is not set
 # BR2_PACKAGE_NEWT is not set
 BR2_PACKAGE_PCRE=y
 # BR2_PACKAGE_PCRE_16 is not set
@@ -1388,14 +1212,8 @@ BR2_PACKAGE_PCRE=y
 # BR2_PACKAGE_HAVEGED is not set
 # BR2_PACKAGE_MCRYPT is not set
 # BR2_PACKAGE_MOBILE_BROADBAND_PROVIDER_INFO is not set
-
-#
-# shared-mime-info needs a toolchain w/ wchar, threads
-#
-
-#
-# snowball-init needs a toolchain w/ wchar, threads, dynamic library
-#
+# BR2_PACKAGE_SHARED_MIME_INFO is not set
+# BR2_PACKAGE_SNOWBALL_INIT is not set
 # BR2_PACKAGE_SOUND_THEME_BOREALIS is not set
 # BR2_PACKAGE_SOUND_THEME_FREEDESKTOP is not set
 
@@ -1416,10 +1234,7 @@ BR2_PACKAGE_PCRE=y
 #
 # bcusdk needs a toolchain w/ C++
 #
-
-#
-# bluez-utils needs a toolchain w/ wchar, threads, dynamic library
-#
+# BR2_PACKAGE_BLUEZ_UTILS is not set
 
 #
 # bmon needs a toolchain w/ IPv6
@@ -1459,10 +1274,7 @@ BR2_PACKAGE_DROPBEAR_SMALL=y
 #
 # BR2_PACKAGE_ETHTOOL is not set
 # BR2_PACKAGE_FPING is not set
-
-#
-# gesftpserver needs a toolchain w/ wchar, threads
-#
+# BR2_PACKAGE_GESFTPSERVER is not set
 # BR2_PACKAGE_HEIRLOOM_MAILX is not set
 # BR2_PACKAGE_HIAWATHA is not set
 # BR2_PACKAGE_HOSTAPD is not set
@@ -1473,10 +1285,7 @@ BR2_PACKAGE_DROPBEAR_SMALL=y
 # iftop needs a toolchain w/ IPv6, threads
 #
 # BR2_PACKAGE_IGH_ETHERCAT is not set
-
-#
-# igmpproxy needs a toolchain w/ wchar
-#
+# BR2_PACKAGE_IGMPPROXY is not set
 # BR2_PACKAGE_INADYN is not set
 
 #
@@ -1522,14 +1331,8 @@ BR2_PACKAGE_DROPBEAR_SMALL=y
 # BR2_PACKAGE_MROUTED is not set
 # BR2_PACKAGE_MSMTP is not set
 # BR2_PACKAGE_MTR is not set
-
-#
-# mutt needs a toolchain w/ wchar
-#
-
-#
-# nbd needs a toolchain w/ wchar, threads
-#
+# BR2_PACKAGE_MUTT is not set
+# BR2_PACKAGE_NBD is not set
 # BR2_PACKAGE_NCFTP is not set
 
 #
@@ -1612,10 +1415,6 @@ BR2_PACKAGE_DROPBEAR_SMALL=y
 # BR2_PACKAGE_SPAWN_FCGI is not set
 
 #
-# spice server needs a toolchain w/ wchar, threads
-#
-
-#
 # spice server depends on python (for pyparsing)
 #
 # BR2_PACKAGE_SPICE_PROTOCOL is not set
@@ -1654,16 +1453,10 @@ BR2_PACKAGE_DROPBEAR_SMALL=y
 # BR2_PACKAGE_VPNC is not set
 # BR2_PACKAGE_VSFTPD is not set
 # BR2_PACKAGE_VTUN is not set
-
-#
-# wget needs a toolchain w/ wchar
-#
+# BR2_PACKAGE_WGET is not set
 # BR2_PACKAGE_WIRELESS_REGDB is not set
 # BR2_PACKAGE_WIRELESS_TOOLS is not set
-
-#
-# wireshark needs a toolchain w/ wchar, threads
-#
+# BR2_PACKAGE_WIRESHARK is not set
 # BR2_PACKAGE_WPA_SUPPLICANT is not set
 
 #
@@ -1692,7 +1485,7 @@ BR2_PACKAGE_DROPBEAR_SMALL=y
 # Shells
 #
 # BR2_PACKAGE_BASH is not set
-# BR2_PACKAGE_DASH is not set
+BR2_PACKAGE_DASH=y
 # BR2_PACKAGE_ZSH is not set
 
 #
@@ -1702,13 +1495,13 @@ BR2_PACKAGE_DROPBEAR_SMALL=y
 # BR2_PACKAGE_DIALOG is not set
 # BR2_PACKAGE_DTACH is not set
 # BR2_PACKAGE_FILE is not set
-# BR2_PACKAGE_GNUPG is not set
+BR2_PACKAGE_GNUPG=y
+BR2_PACKAGE_GNUPG_RSA=y
+# BR2_PACKAGE_GNUPG_GPGV is not set
+# BR2_PACKAGE_GNUPG_GPGSPLIT is not set
 # BR2_PACKAGE_INOTIFY_TOOLS is not set
 # BR2_PACKAGE_LOCKFILE_PROGS is not set
-
-#
-# logrotate needs a toolchain w/ wchar
-#
+# BR2_PACKAGE_LOGROTATE is not set
 # BR2_PACKAGE_LOGSURFER is not set
 # BR2_PACKAGE_SCREEN is not set
 # BR2_PACKAGE_SUDO is not set
@@ -1723,10 +1516,7 @@ BR2_PACKAGE_DROPBEAR_SMALL=y
 # BR2_PACKAGE_ACL is not set
 # BR2_PACKAGE_ATTR is not set
 # BR2_PACKAGE_BOOTUTILS is not set
-
-#
-# coreutils needs a toolchain w/ wchar
-#
+# BR2_PACKAGE_COREUTILS is not set
 # BR2_PACKAGE_CPULOAD is not set
 # BR2_PACKAGE_HTOP is not set
 # BR2_PACKAGE_KEYUTILS is not set
@@ -1739,16 +1529,10 @@ BR2_PACKAGE_DROPBEAR_SMALL=y
 # BR2_PACKAGE_NCDU is not set
 # BR2_PACKAGE_NUMACTL is not set
 # BR2_PACKAGE_NUT is not set
-
-#
-# polkit needs a toolchain w/ wchar, threads
-#
+# BR2_PACKAGE_POLKIT is not set
 # BR2_PACKAGE_PROCPS is not set
 # BR2_PACKAGE_PSMISC is not set
-
-#
-# quota needs a toolchain w/ largefile, wchar, threads
-#
+# BR2_PACKAGE_QUOTA is not set
 # BR2_PACKAGE_RSYSLOG is not set
 
 #
@@ -1759,10 +1543,7 @@ BR2_PACKAGE_DROPBEAR_SMALL=y
 #
 # systemd needs udev /dev management and a toolchain w/ IPv6, threads
 #
-
-#
-# util-linux needs a toolchain w/ largefile, wchar
-#
+# BR2_PACKAGE_UTIL_LINUX is not set
 
 #
 # Text editors and viewers
@@ -1770,10 +1551,7 @@ BR2_PACKAGE_DROPBEAR_SMALL=y
 # BR2_PACKAGE_ED is not set
 # BR2_PACKAGE_JOE is not set
 # BR2_PACKAGE_LESS is not set
-
-#
-# nano needs a toolchain w/ wchar
-#
+# BR2_PACKAGE_NANO is not set
 # BR2_PACKAGE_UEMACS is not set
 # BR2_PACKAGE_VIM is not set
 
